--- a/pyCORE/src/emews/base/conf.yml
+++ b/pyCORE/src/emews/base/conf.yml
@@ -16,38 +16,40 @@ system_config_options:
     receive_buffer: 128     # buffer for incoming characters from an eMews client
     command_delimiter: ' '  # delimit commands using this
     recv_timeout: 20  # in seconds - wait this long for a timeout in expected response
+  paths:  # package paths for the emews system
+    emews_pkg_path: emews
+    emews_base_pkg_path: emews.base
+    emews_pkg_services_path: emews.services
+    emews_pkg_helpers_path: emews.helpers
 
-logging:
-  # default options (if no log configuration defined in system or node config files)
-  logger: emews.base
-  message_level: DEBUG  # log messages of this level and above (default)
-  message_format: '[%(asctime)s] %(nodename)-12.12s | %(threadName)-16.16s [%(levelname)-8.8s | %(module)-16.16s | %(funcName)-16.16s]: %(message)s'
+init_config_options:
+  logging:
+    # default options (if no log configuration defined in system or node config files)
+    logger: emews.base
+    message_level: DEBUG  # log messages of this level and above (default)
+    message_format: '[%(asctime)s] %(nodename)-12.12s | %(threadName)-16.16s [%(levelname)-8.8s | %(module)-16.16s | %(funcName)-16.16s]: %(message)s'
 
-  log_types:  # logging types
-    emews.base:
-      handlers:
-      - logging.StreamHandler
-    emews.distributed:  # distributed logging (nodes send log messages to a designated node)
-      handlers:
-      - logging.handlers.SocketHandler
-    emews.file:  # logs to a file
-      handlers:
-      - logging.FileHandler
+    log_types:  # logging types
+      emews.base:
+        handlers:
+        - logging.StreamHandler
+      emews.distributed:  # distributed logging (nodes send log messages to a designated node)
+        handlers:
+        - logging.handlers.SocketHandler
+      emews.file:  # logs to a file
+        handlers:
+        - logging.FileHandler
 
-  log_handlers:
-    logging.FileHandler:
-      filename: emews.log
-      mode: a
-      delay: True
-    logging.handlers.SocketHandler: {}
-    logging.StreamHandler:
-      stream: 'ext://sys.stdout'
+    log_handlers:
+      logging.FileHandler:
+        filename: emews.log
+        mode: a
+        delay: True
+      logging.handlers.SocketHandler: {}
+      logging.StreamHandler:
+        stream: 'ext://sys.stdout'
 
-paths:  # package paths for the emews system
-  emews_pkg_path: emews
-  emews_base_pkg_path: emews.base
-  emews_pkg_services_path: emews.services
-  emews_pkg_helpers_path: emews.helpers
+    logger_parameters: null
 
 required_sections: # these sections will be added if not present in any configs
   general: null
