--- a/pyCORE/src/emews/services/autossh/autossh.yml
+++ b/pyCORE/src/emews/services/autossh/autossh.yml
@@ -25,33 +25,29 @@ config:  # service configuration
     - ls -l
     - ps aux
 
-dependencies:  # additional classes that this service requires
+helpers:  # helpers which this service will use (many to one)
   num_commands_sampler:  # number of commands to execute in an SSH session.
-    class: TruncnormSampler
-    module: emews.samplers.truncnormsampler
-    parameters:
+    helper: samplers.TruncnormSampler
+    config:
       upper_bound: 15  # len(command.command_list) - 1
       sigma: 2.5  # std deviation
   command_sampler:  # the next command to execute
-    class: TruncnormSampler
-    module: emews.samplers.truncnormsampler
-    parameters:
+    helper: samplers.TruncnormSampler
+    config:
       upper_bound: null
       sigma: 1.5
   command_delay_sampler:  # delay to execute next command
-    class: UniformSampler
-    module: emews.samplers.uniformsampler
-    parameters:
+    helper: samplers.UniformSampler
+    config:
       lower_bound: 1  # lower bound (sec) - a_2
       upper_bound: 48  # upper bound (sec) - b_2
 
-decorators:  # any decorators required need to be defined here
-  NoRaiseService: {} # Keeps other decorators active if service raises exception
-  LoopedService:  # LoopedService decorator
-    dependencies:  # additional classes that this decorator requires
+extensions:  # decorators that extend core service behavior (one to one)
+  run.NoRaiseService: {} # Keeps other decorators active if service raises exception
+  run.LoopedService:  # LoopedService decorator
+    helper:  # additional classes that this decorator requires
       loop_sampler: # unique name to describe the dependency
-        class: UniformSampler  # distribution to sample service loop start time from
-        module: emews.samplers.uniformsampler
-        parameters:
+        helper: samplers.UniformSampler
+        config:
           lower_bound: 5  # lower bound (sec) - a_1
           upper_bound: 32  # upper bound (sec) - b_1
