Added 'emews.testing' to logging modes (uses NullHandler) Modified system_init to create Config object for config dict Updated sample_nodeconfig.yml to use testservice for a startup service Updated sample_conf.yml to use emews.testing for logging. Created a service: TestService Updated unit tests appropriately for above changes Added new unit test module: test_system_manager.py

--- a/pyCORE/src/emews/base/conf.yml
+++ b/pyCORE/src/emews/base/conf.yml
@@ -35,6 +35,9 @@ init_config_options:
       emews.file:  # logs to a file
         handlers:
         - logging.FileHandler
+      emews.testing:
+        handlers:
+        - logging.NullHandler
 
     log_handlers:
       logging.FileHandler:
