--- a/pyCORE/src/emews/base/tests/sample_conf.yml
+++ b/pyCORE/src/emews/base/tests/sample_conf.yml
@@ -3,13 +3,16 @@
 general:  # general eMews daemon options
   # Delay (seconds) to start services from eMews daemon invocation.
   service_start_delay: 300
+  # Delay to wait for 'graceful' thread shutdown.  After this wait, continue shut down.
+  thread_shutdown_wait: 5  # in seconds (-1 = disable)
+
+communication:  # communication related eMews daemon options
+  host: localhost  # host to bind to (should be localhost or 127.0.0.1, etc)
+  port: 32518      # port to use
 
 logging:  # logging configuration
-  logger: emews.distributed  # send log messages to a designated node across the network
+  logger: emews.testing  # NullHandler
   message_level: DEBUG  # log messages of this level and above
-  logger_parameters:  # parameters specific to the chosen logger
-    host: 10.0.0.21  # host/IP to send log entries to (designated node)
-    port: 32519  # port on destination host to send log entries to
 
 startup_services: null
   # Any services which should start immediately can be placed here.  Per node startup services
