Fixed issue with logging.StreamHandler needing a reference to the actual stream object. -- this required changing the stream strings in the conf files by removing the 'ext://' (this is fine, and probably preferred) Fixed issue in ThreadDispatcher so it won't launch any service start delay in local mode. Added local mode flag to the global (BaseObject) system config so I don't have to pass it around to various system classes.  Also handy as service classes will have access to it (yay!!)

--- a/pyCORE/src/emews/base/conf.yml
+++ b/pyCORE/src/emews/base/conf.yml
@@ -29,7 +29,7 @@ init_config_options:
           host: 127.0.0.1  # this should be overridden
           port: 32519
         logging.StreamHandler:
-          stream: 'ext://sys.stdout'
+          stream: 'sys.stdout'
   overrides:
     logging:
       logger: emews.base
