Added reserved word to base config: emews-overwrite Modified system_init._section_merge to support 'emews-overwrite'.  This amounted to simply adding another condition to the empty dict check, and then inserting 'emews-overwrite' key into resulting section. Modified system_init._init_base_logger to provide more verbose output on StreamHandler missing logger_parameters.  Right now only for 'stream' key. Added sample node config for using emews.base logger (stream) instead of distributed logging.

--- a/pyCORE/src/emews/base/conf.yml
+++ b/pyCORE/src/emews/base/conf.yml
@@ -34,7 +34,8 @@ init_config_options:
     logging:
       logger: emews.base
       message_level: DEBUG  # log messages of this level and above (default)
-      logger_parameters: {}  # any KVs in an override will work
+      logger_parameters:
+        emews-overwrite: True  # any KVs in an override will work, and always overwrite the section
 
 # System configuration skeleton.  This is the configuration structure after eMews system init.
 system_config_options:
