Misc bug fixes (node name explicitly set now works)

--- a/pyCORE/src/emews/node/nodeconfig-logserver.yml
+++ b/pyCORE/src/emews/node/nodeconfig-logserver.yml
@@ -1,7 +1,7 @@
 # Example node config file for the designated log server node
 # YAML 1.2 compliant
 general:
-  node_name: null
+  node_name: logserver
 
 startup_services:
   # null as value indicates using all defaults
