--- a/pyCORE/src/emews/services/autossh/autossh.yml
+++ b/pyCORE/src/emews/services/autossh/autossh.yml
@@ -1,10 +1,11 @@
 # Configuration file for AutoSSH
 # YAML 1.2 compliant
-config:  # service configuration
+parameters:  # instance variables
   host: 10.0.0.11
   port: 22
   username: coreuser
   password: P28c7RtO0
+
   command_list:
   - uptime
   - ps aux
@@ -23,29 +24,27 @@ config:  # service configuration
   - ls -l
   - ps aux
 
-helpers:  # helpers which this service will use (many to one)
-  num_commands_sampler:  # number of commands to execute in an SSH session.
-    helper: samplers.TruncnormSampler
-    config:
+  num_commands_sampler:
+    component: samplers.TruncnormSampler
+    parameters:  # initial parameters for the chosen component
       upper_bound: 15  # len(command.command_list) - 1
       sigma: 2.5  # std deviation
   command_sampler:  # the next command to execute
-    helper: samplers.TruncnormSampler
-    config:
-      upper_bound: null
+    component: samplers.TruncnormSampler
+    parameters:
       sigma: 1.5
   command_delay_sampler:  # delay to execute next command
-    helper: samplers.UniformSampler
-    config:
-      lower_bound: 1  # lower bound (sec) - a_2
-      upper_bound: 48  # upper bound (sec) - b_2
+    component: samplers.UniformSampler
+    parameters:
+      lower_bound: 1  # lower bound (sec)
+      upper_bound: 48  # upper bound (sec)
 
-extensions:  # decorators that extend core service behavior (one to one)
-  run.NoRaiseService: {} # Keeps other decorators active if service raises exception
-  run.LoopedService:  # LoopedService decorator
-    helpers:  # additional classes that this decorator requires
-      loop_sampler: # unique name to describe the dependency
-        helper: samplers.UniformSampler
-        config:
-          lower_bound: 5  # lower bound (sec) - a_1
-          upper_bound: 32  # upper bound (sec) - b_1
+modifiers:  # decorators that extend core service behavior (one to one)
+- run.NoRaiseService: null # catches unhandled exceptions from service
+- run.Looper:  # restarts service after expected termination
+    parameters:
+      loop_sampler:
+        component: samplers.UniformSampler
+          parameters:
+            lower_bound: 5  # lower bound (sec)
+            upper_bound: 32  # upper bound (sec)
