--- a/pyCORE/src/emews/system_local.yml
+++ b/pyCORE/src/emews/system_local.yml
@@ -13,8 +13,5 @@ communication:  # communication related eMews daemon options
   host: localhost  # host to bind to (should be localhost or 127.0.0.1, etc)
   port: 32518      # port to use
 
-logging:  # logging configuration
-  logger: emews.base  # send log messages to a designated node across the network
-  message_level: DEBUG  # log messages of this level and above
-  logger_parameters:  # parameters specific to the chosen logger
-    stream: 'sys.stdout'
+logging:
+  stream: 'sys.stdout'  # stream, if given, will log to the stream.
