lots -o- bug fixes eMews starts up now in local mode without startup services and with. Some fixes with ServiceBuilder relating to how the methods are class methods, so self.* attributes from BaseObject are not instantiated.

--- a/pyCORE/src/emews/base/conf.yml
+++ b/pyCORE/src/emews/base/conf.yml
@@ -29,4 +29,4 @@ system:
     communication:  # communication related eMews daemon options
       host: 127.0.0.1  # host to bind to (should be localhost or 127.0.0.1, etc)
       port: 32518  # port to use
-    startup_services: {}
+    startup_services: []
