--- a/pyCORE/src/emews/system_local.yml
+++ b/pyCORE/src/emews/system_local.yml
@@ -15,3 +15,6 @@ communication:  # communication related eMews daemon options
 
 logging:
   stream: 'sys.stdout'  # stream, if given, will log to the stream.
+
+startup_services:
+- AutoSSH
