-Removed all remaining interfaces, as it's kinda silly to have them in Python. -Added a ZeroSampler to return zero only. - Removed modifiers.  Reduces overhead, while acknowledging that NoraiseService will become a global parameter, and Looper will be part of a new class, ThreadSpawn. -Created a new class, ThreadSpawn, which replaces ThreadWrapper.  This class along with ThreadDispatcher and Runnable are under emews.base.threading. -Created a new class, Runnable, which contains sleep(), interrupt() and interrupted. -BaseService now inherits from Runnable, and all sleep/interrupted functionality removed.

--- a/pyCORE/src/emews/services/autossh/autossh.yml
+++ b/pyCORE/src/emews/services/autossh/autossh.yml
@@ -40,11 +40,10 @@ parameters:  # instance variables
       lower_bound: 1  # lower bound (sec)
       upper_bound: 48  # upper bound (sec)
 
-modifiers:
-- run.Looper:  # restarts service after expected termination
+execution:
+  loop: True  # restarts service after expected termination
+  loop_using_sampler:
+    component: samplers.UniformSampler
     parameters:
-      loop_sampler:
-        component: samplers.UniformSampler
-        parameters:
-          lower_bound: 5  # lower bound (sec)
-          upper_bound: 32  # upper bound (sec)
+      lower_bound: 5  # lower bound (sec)
+      upper_bound: 32  # upper bound (sec)
