- Mostly TODOs added. - Changed config to reflect option for 'hub' (hub node - central server)

--- a/pyCORE/src/emews/base/conf.yml
+++ b/pyCORE/src/emews/base/conf.yml
@@ -28,9 +28,9 @@ system:
       thread_shutdown_wait: -1 # Delay (seconds) to wait for 'graceful' thread shutdown.  After this wait, continue shut down.
       halt_on_service_exceptions: True  # If true, then halt eMews on service-originated exceptions
     communication:  # communication related eMews daemon options
+      hub: n1  # name of the node to act as the hub
       host: 127.0.0.1  # host to bind to (should be localhost or 127.0.0.1, etc)
       port: 32518  # port to use
     logging:
-      server: null  # name of the node to host distributed logging
       port: 32519  # port for distributed logging
     startup_services: []
