--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -12,11 +12,9 @@ general:  # general eMews daemon options
   halt_on_service_exceptions: False
 
 communication:  # communication related eMews daemon options
+  hub: n1  # name of the node to act as the hub
   host: localhost  # host to bind to (should be localhost or 127.0.0.1, etc)
   port: 32518      # port to use
-
-logging:
-  server: n1  # name of the node to host distributed logging
 
 startup_services:
   # Any services which should start, for all nodes, should be placed here.  Most services will start
